# ponderada-prog-S3M11ES

./: .env  .gitignore  README.md
dataIngestor/: pyproject.toml
dataIngestor/src/dataingestor/: ingestor.py
dataIngestor/tests/: test_ingestor.py
